--- a/sponsorship.html
+++ b/sponsorship.html
@@ -82,7 +82,7 @@
                     Your support helps UT SHPE students drive toward their goals. We’re happy to answer any
                     questions you have, including specific event donations.
                 </p>
-                <a class="btn-csp" href="assets/files/UT-SHPE 25-26 Corporate Slicitation Packet.pdf" target="_blank" rel="noopener">
+                <a class="btn-csp" href="assets/files/UT-SHPE 25-26 Corporate Solicitation Packet.pdf" target="_blank" rel="noopener">
                   <i class="fa-solid fa-file-pdf"></i>
                   View Corporate Sponsorship Packet (PDF)
                 </a>
