--- a/leadership.html
+++ b/leadership.html
@@ -37,7 +37,7 @@
         </section>
 
         <section class="leader-intro section">
-            <h1 class="leader-title">Meet UT-SHPE's 2025-2026 Leadership Team!</h1>
+            <h1 class="leader-title">Meet UT-SHPE's 2025-2026 LeaderSHPE Team!</h1>
             <div class="leader-rule" aria-hidden="true"></div>
             <p class="leader-text">
                 These are the amazing, determined individuals who make up our leaderSHPE team! Each of them carries
