--- a/leadership.html
+++ b/leadership.html
@@ -99,7 +99,7 @@
                     <div class="officer-body">
                         <h3 class="officer-name">Xitlali Cardenas</h3>
                         <p class="officer-pronouns">She/Her</p>
-                        <p class="officer-role">Treasure</p>
+                        <p class="officer-role">Treasurer</p>
                         <p class="officer-major">Computer Science</p>
                     </div>
                 </article>
