--- a/membership.html
+++ b/membership.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,7 +55,16 @@
                 <h2 class="h2">How to Join UTSHPE</h2>
                 <ol class="steps">
                     <li>
-                        <h3>1) Fill out the membership form</h3>
+                        <h3>1) Fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSefYEFS5tTWalPaEtvPx3zCT-vfP-uMf6iC-OQVeqNwporoNg/viewform?usp=header">membership form</a></h3>
+                    </li>
+                    <li>
+                        <h3>2) Pay membership dues</h3>
+                    </li>
+                    <li>
+                        <h3>3) Join our slack and follow our Instagram to keep up with upcoming events!</h3>
+                    </li>
+                    <li>
+                        <h3>4) Get involved!</h3>
                     </li>
             
     
