--- a/membership.html
+++ b/membership.html
@@ -90,10 +90,10 @@
                   <img src="assets/images/membership/member-of-month.jpg"
                        alt="Member of the Month: First Last at a SHPE event" class="spotlight-photo">
                     <div class="spotlight-body">
-                    <h3 class="spotlight-name">First Last</h3>
-                    <p class="spotlight-meta">ECE • Class of 2027</p>
-                    <p class="spotlight-fact"><strong>Favorite SHPE Memory:</strong> Outreach build day!</p>
-                    <p class="spotlight-fact"><strong>Fun Fact:</strong> Can solve a Rubik’s cube under 30s.</p>
+                    <h3 class="spotlight-name">Alexis De La Torre</h3>
+                    <p class="spotlight-meta">Mechanical Engineering • Class of 2029</p>
+                    <p class="spotlight-fact"><strong>Hometown:</strong>Arlington TX</p>
+                    <p class="spotlight-fact"><strong>Fun Fact:</strong> I dont have an appendix.</p>
                   </div>
                 </article>
             
@@ -103,10 +103,10 @@
                   <img src="assets/images/membership/officer-of-month.jpg"
                        alt="Officer of the Month: First Last speaking at a GM" class="spotlight-photo">
                   <div class="spotlight-body">
-                    <h3 class="spotlight-name">First Last</h3>
-                    <p class="spotlight-meta">Professional Development • Officer</p>
-                    <p class="spotlight-fact"><strong>Favorite SHPE Memory:</strong> First GM of the semester!</p>
-                    <p class="spotlight-fact"><strong>Fun Fact:</strong> Amateur latte artist.</p>
+                    <h3 class="spotlight-name">Jake Medina</h3>
+                    <p class="spotlight-meta">Website Development Chair • Class of 2028</p>
+                    <p class="spotlight-fact"><strong>Hometown:</strong>Elsa TX!</p>
+                    <p class="spotlight-fact"><strong>Fun Fact:</strong> I am a twin.</p>
                   </div>
                 </article>
 
