--- a/membership.html
+++ b/membership.html
@@ -87,7 +87,7 @@
                 <!-- Member of the Month -->
                 <article class="spotlight-card">
                   <div class="badge">Member of the Month</div>
-                  <img src="assets/images/membership/member-of-month.jpg"
+                  <img src="assets/images/membership/Memberofmonth.png"
                        alt="Member of the Month: First Last at a SHPE event" class="spotlight-photo">
                     <div class="spotlight-body">
                     <h3 class="spotlight-name">Alexis De La Torre</h3>
@@ -100,7 +100,7 @@
                 <!-- Officer of the Month -->
                 <article class="spotlight-card alt">
                   <div class="badge alt">Officer of the Month</div>
-                  <img src="assets/images/membership/officer-of-month.jpg"
+                  <img src="assets/images/membership/officerofthemonth.jpg"
                        alt="Officer of the Month: First Last speaking at a GM" class="spotlight-photo">
                   <div class="spotlight-body">
                     <h3 class="spotlight-name">Jake Medina</h3>
