--- a/membership.html
+++ b/membership.html
@@ -52,12 +52,12 @@
                     </div>
 
                     <div class="hero-media slideshow-js" aria-live="polite">
-                        <img src="assets/images/membership/ " class="active">
-                        <img src="assets/images/membership/ ">
-                        <img src="assets/images/membership/ ">
-                        <img src="assets/images/membership/ ">
-                        <img src="assets/images/membership/ ">
-                        <img src="assets/images/membership/ ">
+                        <img src="assets/images/membership/membership1.jpg" class="active">
+                        <img src="assets/images/membership/membership2.jpg ">
+                        <img src="assets/images/membership/membership3.jpg">
+                        <img src="assets/images/membership/membership4.jpg">
+                        <img src="assets/images/membership/membership5.jpg">
+                        <img src="assets/images/membership/membership6.jpg">
                     </div>
                 </div>                    
             </section>
