--- a/shpetinas.html
+++ b/shpetinas.html
@@ -88,7 +88,7 @@
             <div class="slider">
                 <div class="slides">
                     <div class="slide">
-                        <img src="assets/images/shpetinas/event-1.jpg" alt="Mentorship Kickoff">
+                        <img src="assets/images/shpetinas/shpetinaslideshow1.jpg">
                     </div>
                     <div class="slide">
                         <img src="assets/images/shpetinas/event-2.jpg" alt="Study Social">
