--- a/shpetinas.html
+++ b/shpetinas.html
@@ -72,8 +72,48 @@
                 <div class="card">
                     <img class="photo" src="assets/images/shpetinas/person-1.jpg" alt="Chair">
                     <div class="pad">
-                        <h3>First Last</h3>
-                        <p class="role">Chair</p>
+                        <h3>Evelyn Flores</h3>
+                        <p class="role">SHPEtina Director</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img class="photo" src="assets/images/shpetinas/person-1.jpg" alt="Chair">
+                    <div class="pad">
+                        <h3>Natalia Morales</h3>
+                        <p class="role">Fundraising Coordinator Chair</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img class="photo" src="assets/images/shpetinas/person-1.jpg" alt="Chair">
+                    <div class="pad">
+                        <h3>Destiny Licon</h3>
+                        <p class="role">Finance Coordinator Chair</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img class="photo" src="assets/images/shpetinas/person-1.jpg" alt="Chair">
+                    <div class="pad">
+                        <h3>Natalia Martinez</h3>
+                        <p class="role">Marketing Chair</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img class="photo" src="assets/images/shpetinas/person-1.jpg" alt="Chair">
+                    <div class="pad">
+                        <h3>Lizbeth Garcia</h3>
+                        <p class="role">Publicity Chair</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img class="photo" src="assets/images/shpetinas/person-1.jpg" alt="Chair">
+                    <div class="pad">
+                        <h3>Lourdes Garcia</h3>
+                        <p class="role">Internal Affairs Liaison Chair</p>
                     </div>
                 </div>
 
