--- a/shpetinas.html
+++ b/shpetinas.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="card">
-                    <img class="photo" src="assets/images/shpetinas/person-1.jpg" alt="Chair">
+                    <img class="photo" src="assets/images/shpetinas/Destiny.jpg" alt="Chair">
                     <div class="pad">
                         <h3>Destiny Licon</h3>
                         <p class="role">Finance Coordinator Chair</p>
@@ -131,10 +131,10 @@
                         <img src="assets/images/shpetinas/shpetinaslideshow1.JPG">
                     </div>
                     <div class="slide">
-                        <img src="assets/images/shpetinas/event-2.jpg" alt="Study Social">
+                        <img src="assets/images/shpetinas/shpetinaslideshow2.JPG">
                     </div>
                     <div class="slide">
-                        <img src="assets/images/shpetinas/event-3.jpg" alt="Women in STEM Panel">
+                        <img src="assets/images/shpetinas/shpetinaslideshow3.JPG">
                     </div>
                 </div>
                 <div class="dots"></div>
