--- a/shpetinas.html
+++ b/shpetinas.html
@@ -193,6 +193,18 @@
         <div class="slide">
           <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
         </div>
+        <div class="slide">
+          <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
+        </div>
+        <div class="slide">
+          <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
+        </div>
+        <div class="slide">
+          <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
+        </div>
+        <div class="slide">
+          <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
+        </div>
       </div>
       <div class="dots"></div>
     </div>
