--- a/shpetinas.html
+++ b/shpetinas.html
@@ -34,9 +34,7 @@
   <section class="hero">
     <div class="section hero-wrap">
       <div>
-        <p class="kicker">UT SHPE</p>
         <h1>SHPEtinas</h1>
-        <p class="sub">Promoting leadership, scholarship, and professionalism for the women of UT SHPE.</p>
       </div>
 
       <div class="hero-img">
@@ -57,7 +55,7 @@
         connections, and providing unwavering support.
       </p>
 
-      <!-- Optional chips (keep if you like them) -->
+      <!-- Optional chips -->
       <div class="chips" style="margin-top:14px;">
         <span class="chip">Fostering Connections</span>
         <span class="chip">Empowering Women</span>
@@ -98,26 +96,6 @@
           </div>
         </li>
       </ul>
-    </aside>
-  </section>
-
-  <!-- PROMO SPLIT: T-shirt + SHPEtina of the Month -->
-  <section class="promo-split">
-    <!-- Left: T-shirt promo image (replace with your final asset path) -->
-    <article class="tshirt-card">
-      <img src="assets/images/shpetinas/shpetinas-shirt.png" alt="SHPEtinas shirt design" />
-    </article>
-
-    <!-- Right: SHPEtina of the Month -->
-    <aside class="shpetina-month">
-      <span class="badge">SHPEtina of the Month</span>
-      <img src="assets/images/shpetinas/person-1.jpg" alt="SHPEtina of the Month" />
-      <h3 class="name">First Last</h3>
-      <p class="meta">Major • Class of 20XX</p>
-      <p>
-        A short blurb about why this SHPEtina is featured this month. Recognizing outstanding
-        leadership, service, and sisterhood in our community.
-      </p>
     </aside>
   </section>
 
@@ -210,17 +188,22 @@
     </div>
   </section>
 
-  <!-- CTA (narrower width via CSS) -->
-  <section class="section cta">
-    <h2 class="h2">Want to Support Us?</h2>
-    <p>
-      Partner with SHPEtinas to sponsor events, offer workshops, or mentor our members.
-      We welcome collaborations that uplift Latinas in STEM.
-    </p>
-    <div class="btn-group">
-      <a class="btn primary" href="mailto:shpe@utexas.edu">Email Us</a>
-      <a class="btn outline" href="sponsorship.html">Sponsorship Info</a>
-    </div>
+  <!-- PROMO SPLIT: T-shirt + SHPEtina of the Month (moved to bottom) -->
+  <section class="promo-split promo-bottom">
+    <article class="tshirt-card">
+      <img src="assets/images/shpetinas/shpetinas-shirt.png" alt="SHPEtinas shirt design" />
+    </article>
+
+    <aside class="shpetina-month">
+      <span class="badge">SHPEtina of the Month</span>
+      <img src="assets/images/shpetinas/person-1.jpg" alt="SHPEtina of the Month" />
+      <h3 class="name">First Last</h3>
+      <p class="meta">Major • Class of 20XX</p>
+      <p>
+        A short blurb about why this SHPEtina is featured this month. Recognizing outstanding
+        leadership, service, and sisterhood in our community.
+      </p>
+    </aside>
   </section>
 
   <!-- Footer -->
