--- a/shpetinas.html
+++ b/shpetinas.html
@@ -196,9 +196,9 @@
 
     <aside class="shpetina-month">
       <span class="badge">SHPEtina of the Month</span>
-      <img src="assets/images/shpetinas/person-1.jpg" alt="SHPEtina of the Month" />
-      <h3 class="name">First Last</h3>
-      <p class="meta">Major • Class of 20XX</p>
+      <img src="assets/images/shpetinas/shpetinaofmonth.jpg" alt="SHPEtina of the Month" />
+      <h3 class="name">Kimberly Rodriguez</h3>
+      <p class="meta">Mechanical Engineering • Class of 2029</p>
       <p>
         A short blurb about why this SHPEtina is featured this month. Recognizing outstanding
         leadership, service, and sisterhood in our community.
