--- a/membership.html
+++ b/membership.html
@@ -58,6 +58,7 @@
                         <img src="assets/images/membership/membership4.jpg">
                         <img src="assets/images/membership/membership5.jpg">
                         <img src="assets/images/membership/membership6.jpg">
+                        <img src="assets/images/membership/membership7.jpg">
                     </div>
                 </div>                    
             </section>
