--- a/shpetinas.html
+++ b/shpetinas.html
@@ -199,10 +199,10 @@
       <img src="assets/images/shpetinas/shpetinaofmonth.jpg" alt="SHPEtina of the Month" />
       <h3 class="name">Kimberly Rodriguez</h3>
       <p class="meta">Mechanical Engineering • Class of 2029</p>
-      <p>
-        A short blurb about why this SHPEtina is featured this month. Recognizing outstanding
-        leadership, service, and sisterhood in our community.
-      </p>
+      <ul class="facts">
+        <li><strong>Hometown:</strong> Brownsville, TX</li>
+        <li><strong>Fun Fact:</strong>Started her own bakery!</li>
+      </ul>
     </aside>
   </section>
 
