--- a/shpetinas.html
+++ b/shpetinas.html
@@ -191,6 +191,7 @@
   <!-- PROMO SPLIT: T-shirt + SHPEtina of the Month (moved to bottom) -->
   <section class="promo-split promo-bottom">
     <article class="tshirt-card">
+      <h3 class="tshirt-title">Our Merch</h3>
       <img src="assets/images/shpetinas/shpetinamerch.png" alt="SHPEtinas shirt design" />
     </article>
 
