--- a/shpetinas.html
+++ b/shpetinas.html
@@ -156,35 +156,21 @@
   </section>
 
   <!-- EVENTS (slider) -->
+
+  
+
+    
+
   <section id="events" class="section events">
     <h2 class="h2">Our Events</h2>
     <div class="rule"></div>
 
-    <div class="slider">
-      <div class="slides">
-        <div class="slide">
-          <img src="assets/images/shpetinas/shpetinaslideshow1.JPG" alt="Event photo 1" />
-        </div>
-        <div class="slide">
-          <img src="assets/images/shpetinas/shpetinaslideshow2.JPG" alt="Event photo 2" />
-        </div>
-        <div class="slide">
-          <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
-        </div>
-        <div class="slide">
-          <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
-        </div>
-        <div class="slide">
-          <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
-        </div>
-        <div class="slide">
-          <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
-        </div>
-        <div class="slide">
-          <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event photo 3" />
-        </div>
-      </div>
-      <div class="dots"></div>
+    <div class="ev-auto" aria-label="Event photos slideshow">
+    <img src="assets/images/shpetinas/shpetinaslideshow1.JPG" alt="Event 1">
+    <img src="assets/images/shpetinas/shpetinaslideshow2.JPG" alt="Event 2">
+    <img src="assets/images/shpetinas/shpetinaslideshow3.JPG" alt="Event 3">
+    <img src="assets/images/shpetinas/shpetinaslideshow4.JPG" alt="Event 4">
+    <img src="assets/images/shpetinas/shpetinaslideshow5.JPG" alt="Event 5">
     </div>
   </section>
 
