--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
             <div class="event-carousel">
               <button class="carousel-btn prev">&#10094;</button>
               <div class="event-track">
-                <img src="assets/images/Home_Page/Event1.png" alt="Event 1">
-                <img src="assets/images/Home_Page/Event2.jpg" alt="Event 2">
-                <img src="assets/images/Home_Page/Eventweek.png" alt="Event 3">
+                <img src="assets/images/Home_Page/Eventweek.png">
+                <img src="assets/images/Home_Page/SNAP.png">
+                <img src="assets/images/Home_Page/Event1.png">
+                <img src="assets/images/Home_Page/Event2.pnp">
+                <img src="assets/images/Home_Page/Event3.png">
               </div>
               <button class="carousel-btn next">&#10095;</button>
             </div> 
