--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="assets/images/Home_Page/Eventweek.png">
                 <img src="assets/images/Home_Page/SNAP.png">
                 <img src="assets/images/Home_Page/Event1.png">
-                <img src="assets/images/Home_Page/Event2.pnp">
+                <img src="assets/images/Home_Page/Event2.png">
                 <img src="assets/images/Home_Page/Event3.png">
               </div>
               <button class="carousel-btn next">&#10095;</button>
