--- a/resources.html
+++ b/resources.html
@@ -26,7 +26,11 @@
             <a href="sponsorship.html" class="nav-link">Sponsorship</a>
             <!-- special case for shpetinas, will be bold pink-->
             <a href="shpetinas.html" class="nav-link shpetinas">SHPEtinas</a>
-            <a href="membership.html" class="nav-link active">Membership</a>
-            <a href="resources.html" class="nav-link">Resources</a>                
+            <a href="membership.html" class="nav-link">Membership</a>
+            <a href="resources.html" class="nav-link active">Resources</a>                
         </nav>
     </header>
+
+        <body>
+            <h1>Under construction!</h1>
+        </body>
